force-app/main/default/objects/CareBenefitVerifyRequest__c/CareBenefitVerifyRequest__c.object-meta.xml
<CustomObject>
    <label>Care Benefit Verification Request</label>
    <nameField>
        <displayFormat>CBVR-{0000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Benefit Verification Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>