force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/DiagnosisCode__c.field-meta.xml
<CustomField>
    <fullName>DiagnosisCode__c</fullName>
    <label>Diagnosis Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>