force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/InsuranceProvider__c.field-meta.xml
<CustomField>
    <fullName>InsuranceProvider__c</fullName>
    <label>Insurance Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>