force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/PatientFirstName__c.field-meta.xml
<CustomField>
    <fullName>PatientFirstName__c</fullName>
    <label>Patient First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>