force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/PatientLastName__c.field-meta.xml
<CustomField>
    <fullName>PatientLastName__c</fullName>
    <label>Patient Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>