force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ProviderFirstName__c.field-meta.xml
<CustomField>
    <fullName>ProviderFirstName__c</fullName>
    <label>Provider First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>