force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ProviderLastName__c.field-meta.xml
<CustomField>
    <fullName>ProviderLastName__c</fullName>
    <label>Provider Last Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>