force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/ProviderSalutation__c.field-meta.xml
<CustomField>
    <fullName>ProviderSalutation__c</fullName>
    <label>Provider Salutation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr.</fullName>
                <default>true</default>
                <label>Dr.</label>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>