force-app/main/default/objects/CareBenefitVerifyRequest__c/fields/StatusReason__c.field-meta.xml
<CustomField>
    <fullName>StatusReason__c</fullName>
    <label>StatusReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>